--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,9 @@
     "@tarojs/taro-swan": "1.2.26",
     "@tarojs/taro-tt": "1.2.26",
     "@tarojs/taro-weapp": "1.2.26",
+    "nerv-devtools": "^1.3.9",
     "nervjs": "^1.3.9",
-    "nerv-devtools": "^1.3.9"
+    "weapp-qrcode": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.6",
