--- a/client/package.json
+++ b/client/package.json
@@ -20,16 +20,16 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"@tarojs/async-await": "1.3.0-beta.5",
-		"@tarojs/components": "1.3.0-beta.5",
-		"@tarojs/mobx": "1.3.0-beta.5",
-		"@tarojs/router": "1.3.0-beta.5",
-		"@tarojs/taro": "1.3.0-beta.5",
-		"@tarojs/taro-alipay": "1.3.0-beta.5",
-		"@tarojs/taro-h5": "1.3.0-beta.5",
-		"@tarojs/taro-swan": "1.3.0-beta.5",
-		"@tarojs/taro-tt": "1.3.0-beta.5",
-		"@tarojs/taro-weapp": "1.3.0-beta.5",
+		"@tarojs/async-await": "1.3.0",
+		"@tarojs/components": "1.3.0",
+		"@tarojs/mobx": "1.3.0",
+		"@tarojs/router": "1.3.0",
+		"@tarojs/taro": "1.3.0",
+		"@tarojs/taro-alipay": "1.3.0",
+		"@tarojs/taro-h5": "1.3.0",
+		"@tarojs/taro-swan": "1.3.0",
+		"@tarojs/taro-tt": "1.3.0",
+		"@tarojs/taro-weapp": "1.3.0",
 		"classnames": "^2.2.6",
 		"mobx": "4.8.0",
 		"nerv-devtools": "^1.3.9",
@@ -37,11 +37,11 @@
 		"weapp-qrcode": "^1.0.0"
 	},
 	"devDependencies": {
-		"@tarojs/plugin-babel": "1.3.0-beta.5",
-		"@tarojs/plugin-csso": "1.3.0-beta.5",
-		"@tarojs/plugin-sass": "1.3.0-beta.5",
-		"@tarojs/plugin-uglifyjs": "1.3.0-beta.5",
-		"@tarojs/webpack-runner": "1.3.0-beta.5",
+		"@tarojs/plugin-babel": "1.3.0",
+		"@tarojs/plugin-csso": "1.3.0",
+		"@tarojs/plugin-sass": "1.3.0",
+		"@tarojs/plugin-uglifyjs": "1.3.0",
+		"@tarojs/webpack-runner": "1.3.0",
 		"@types/react": "^16.4.6",
 		"@types/webpack-env": "^1.13.6",
 		"babel-eslint": "^8.2.3",
@@ -51,9 +51,9 @@
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "^1.6.1",
 		"eslint": "^4.19.1",
-		"eslint-config-taro": "1.3.0-beta.5",
+		"eslint-config-taro": "1.3.0",
 		"eslint-plugin-import": "^2.12.0",
 		"eslint-plugin-react": "^7.8.2",
-		"eslint-plugin-taro": "1.3.0-beta.5"
+		"eslint-plugin-taro": "1.3.0"
 	}
 }
